<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.android04.godfisherman.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.android04.godfisherman.ui.feed.FeedFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_feed" />

    <activity
        android:id="@+id/navigation_notifications"
        android:name="com.android04.godfisherman.ui.camera.CameraActivity"
        android:label="@string/title_camera"
        tools:layout="@layout/activity_camera" />

    <fragment
        android:id="@+id/navigation_stopwatch"
        android:name="com.android04.godfisherman.ui.stopwatch.StopwatchInfoFragment"
        android:label="@string/navigation_menu_stopwatch"
        tools:layout="@layout/fragment_stopwatch_info" />

    <fragment
        android:id="@+id/navigation_my_page"
        android:name="com.android04.godfisherman.ui.mypage.MyPageFragment"
        android:label="@string/navigation_menu_my_page"
        tools:layout="@layout/fragment_my_page" />
</navigation>