<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_time"
            android:textColor="@color/black"
            android:textSize="@dimen/text_median"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_fish_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_timeline_fish_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_time"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_fish_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_median"
            android:text="@string/sample_text_short"
            android:textSize="@dimen/text_median"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_fish_size"
            app:layout_constraintStart_toEndOf="@id/iv_fish_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_fish_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xx_small"
            android:text="@string/sample_text_long"
            android:textSize="@dimen/text_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_fish_type"
            app:layout_constraintTop_toBottomOf="@id/tv_fish_type" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:src="@drawable/ic_line_up"
            app:layout_constraintBottom_toTopOf="@id/iv_fish_icon"
            app:layout_constraintEnd_toEndOf="@id/iv_fish_icon"
            app:layout_constraintStart_toStartOf="@id/iv_fish_icon" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:src="@drawable/ic_line_down"
            app:layout_constraintEnd_toEndOf="@id/iv_fish_icon"
            app:layout_constraintStart_toStartOf="@id/iv_fish_icon"
            app:layout_constraintTop_toBottomOf="@id/iv_fish_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
