<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        tools:context=".ui.login.LogInActivity">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="48dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/iv_app_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_name_sub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name_sub"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="32dp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

        <ImageView
            android:id="@+id/iv_app_icon"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/app_icon"
            app:layout_constraintBottom_toBottomOf="@id/googleButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_x_large"
            android:text="@string/social_login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_x_large"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/googleButton"
            app:layout_constraintEnd_toEndOf="@id/googleButton"
            app:layout_constraintStart_toStartOf="@id/googleButton" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:buttonSize="wide"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_app_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
